# pomodoit

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: code.yml  spelling.yml
src/: constants.rs  main.rs
src/commands/: help.rs  mod.rs  register.rs
src/core/: client.rs  handler.rs  mod.rs
