[package]
name = "pomodoit"
version = "0.1.0"
edition = "2021"
authors = ["Shiv <hello@shivs.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.65"
poise = "0.3.0"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
dotenv = "0.15.0"